# firefly-python-api

./: .butler-version  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.butler/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  REQUIREMENTS_BDD.md  REQUIREMENTS_CROSS_WORKSPACE.md  REQUIREMENTS_MCP.md  REQUIREMENTS_UNINSTALL.md  pyproject.toml
.butler/.claude/: settings.json
.butler/.claude/hooks/: agent_result_gate.py  subagent_toolcheck.py
.butler/.github/workflows/: ci.yml
.butler/claude-agents/: test-writer.agent.md
.butler/docs/tasks/: TASK-014-fix-pyproject-scaffold.md  TASK-015-butler-trim-target.md  TASK-017-add-mit-license.md  TASK-018-fix-butler-trim-hardcoded-list.md  TASK-019-fix-pr-task-branch-already-exists-error.md  TASK-020-clarify-agent-invocation.md  TASK-021-package-scaffolding.md  TASK-022-butler-core-tasks-module.md  TASK-023-butler-core-git-ops-module.md  TASK-024-butler-cli.md  TASK-025-mcp-server.md  TASK-026-makefile-refactor.md  TASK-027-packaging-and-optionality.md  TASK-028-sync-claude-agents-dir.md  TASK-029-guardian-subagent-verification.md  (+14 more)
.butler/mcp/: pyproject.toml  server.py
.butler/scaffold/: .gitignore.tmpl  pyproject.toml.tmpl
.butler/scripts/: validate_agents.py
.butler/templates/: CLAUDE.md.tmpl  pr-reviewer.agent.md.tmpl  requirements-drafter.agent.md.tmpl  task-drafter.agent.md.tmpl
.butler/tests/: test_cli.py  test_git_ops.py  test_hooks.py  test_packaging.py  test_subagent_gate.py  test_tasks.py  test_uninstall.py  test_validate_agents.py
(+70 files in other folders)
