[project]
name = "butler-core"
version = "0.1.0"
description = "Shared task-core for python-butler: task file parsing and git/gh operations"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "pymarkdownlnt>=0.9.36",
    "complexipy",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pre-commit",
]

[project.scripts]
butler = "butler_cli.__main__:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[tool.bandit]
skips = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
