[project]
name = "butler-mcp"
version = "0.1.0"
description = "MCP server exposing butler_core task and git/gh operations over stdio"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "butler-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv.sources]
butler-core = { path = "..", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
